--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <ul>
                 <div class="section">
                     <label for="101">
-                        <input type="radio" name="ans1" id="101">(A) 1940s
+                        <input type="radio" name="ans1" id="101" value="1940s">(A) 1940s
                     </label>
                 </div>
                 <div class="section">
                     <label for="102">
-                        <input type="radio" name="ans1" id="102">(B) 1950s
+                        <input type="radio" name="ans1" id="102" value="1950s">(B) 1950s
                     </label>
                 </div>
                 <div class="section">
                     <label for="103">
-                        <input type="radio" name="ans1" id="103">(C) 1960s
+                        <input type="radio" name="ans1" id="103" value="1960s">(C) 1960s
                     </label>
                 </div>
                 <div class="section">
                     <label for="104">
-                        <input type="radio" name="ans1" id="104">(D) 1980s
+                        <input type="radio" name="ans1" id="104" value="1980s">(D) 1980s
                     </label>
                 </div>
             </ul>
@@ -41,22 +41,23 @@
             <ul>
                 <div class="section">
                     <label for="105">
-                        <input type="radio" name="an2" id="105">(A) Internet Survey Period
+                        <input type="radio" name="an2" id="105" value="I">(A) Internet Survey Period
                     </label>
                 </div>
                 <div class="section">
                     <label for="106">
-                        <input type="radio" name="ans2" id="106">(B) Integrated Service Provider
+                        <input type="radio" name="ans2" id="106" value="fe">(B) Integrated Service Provider
                     </label>
                 </div>
                 <div class="section">
                     <label for="107">
-                        <input type="radio" name="ans2" id="107">(C) Internet Security Protocol
+                        <input type="radio" name="ans2" id="107" value="d">(C) Internet Security Protocol
                     </label>
                 </div>
                 <div class="section">
                     <label for="108">
-                        <input type="radio" name="ans2" id="108">(D) Internet Service Provider
+                        <input type="radio" name="ans2" id="108" value="Internet Service Provider">(D) Internet Service
+                        Provider
                     </label>
                 </div>
             </ul>
@@ -66,22 +67,22 @@
             <ul>
                 <div class="section">
                     <label for="109">
-                        <input type="radio" name="ans3" id="109">(A) Microsoft
+                        <input type="radio" name="ans3" id="109" value="microsoft">(A) Microsoft
                     </label>
                 </div>
                 <div class="section">
                     <label for="110">
-                        <input type="radio" name="ans3" id="110">(B) Sun
+                        <input type="radio" name="ans3" id="110" value="sun">(B) Sun
                     </label>
                 </div>
                 <div class="section">
                     <label for="111">
-                        <input type="radio" name="ans3" id="111">(C) IBM
+                        <input type="radio" name="ans3" id="111" value="IBM">(C) IBM
                     </label>
                 </div>
                 <div class="section">
                     <label for="112">
-                        <input type="radio" name="ans3" id="112">(D) Novell
+                        <input type="radio" name="ans3" id="112" value="Novell">(D) Novell
                     </label>
                 </div>
             </ul>
@@ -91,22 +92,22 @@
             <ul>
                 <div class="section">
                     <label for="113">
-                        <input type="radio" name="ans4" id="113">(A) OS-2
+                        <input type="radio" name="ans4" id="113" value="OS-2">(A) OS-2
                     </label>
                 </div>
                 <div class="section">
                     <label for="114">
-                        <input type="radio" name="ans4" id="114">(B) Windows
+                        <input type="radio" name="ans4" id="114" value="windows">(B) Windows
                     </label>
                 </div>
                 <div class="section">
                     <label for="115">
-                        <input type="radio" name="ans4" id="115">(C) DOS
+                        <input type="radio" name="ans4" id="115" value="DOS">(C) DOS
                     </label>
                 </div>
                 <div class="section">
                     <label for="116">
-                        <input type="radio" name="ans4" id="116">(D) UNIX
+                        <input type="radio" name="ans4" id="116" value="UNIX">(D) UNIX
                     </label>
                 </div>
             </ul>
@@ -117,22 +118,22 @@
             <ul>
                 <div class="section">
                     <label for="117">
-                        <input type="radio" name="ans5" id="117">(A) Subject directories
+                        <input type="radio" name="ans5" id="117" value="subject directories">(A) Subject directories
                     </label>
                 </div>
                 <div class="section">
                     <label for="118">
-                        <input type="radio" name="ans5" id="118">(B) Search engines
+                        <input type="radio" name="ans5" id="118" value="engines">(B) Search engines
                     </label>
                 </div>
                 <div class="section">
                     <label for="119">
-                        <input type="radio" name="ans5" id="119">(C) Meta-search engines
+                        <input type="radio" name="ans5" id="119" value="meta">(C) Meta-search engines
                     </label>
                 </div>
                 <div class="section">
                     <label for="120">
-                        <input type="radio" name="ans5" id="120">(D) Discussion groups
+                        <input type="radio" name="ans5" id="120" value="groups">(D) Discussion groups
                     </label>
                 </div>
             </ul>
@@ -142,22 +143,22 @@
             <ul>
                 <div class="section">
                     <label for="121">
-                        <input type="radio" name="ans6" id="121">(A) Compressed Archive file
+                        <input type="radio" name="ans6" id="121" value="compressed">(A) Compressed Archive file
                     </label>
                 </div>
                 <div class="section">
                     <label for="122">
-                        <input type="radio" name="ans6" id="122">(B) Image file
+                        <input type="radio" name="ans6" id="122" value="image">(B) Image file
                     </label>
                 </div>
                 <div class="section">
                     <label for="123">
-                        <input type="radio" name="ans6" id="123">(C) Temporary file
+                        <input type="radio" name="ans6" id="123" value="temporary file">(C) Temporary file
                     </label>
                 </div>
                 <div class="section">
                     <label for="124">
-                        <input type="radio" name="ans6" id="124">(D) Audio file
+                        <input type="radio" name="ans6" id="124" value="audio">(D) Audio file
                     </label>
                 </div>
             </ul>
@@ -168,22 +169,22 @@
             <ul>
                 <div class="section">
                     <label for="125">
-                        <input type="radio" name="ans7" id="125">(A) Internet
+                        <input type="radio" name="ans7" id="125" value="internet">(A) Internet
                     </label>
                 </div>
                 <div class="section">
                     <label for="126">
-                        <input type="radio" name="ans7" id="126">(B) Intranet
+                        <input type="radio" name="ans7" id="126" value="intranet">(B) Intranet
                     </label>
                 </div>
                 <div class="section">
                     <label for="127">
-                        <input type="radio" name="ans7" id="127">(C) Local Area Network
+                        <input type="radio" name="ans7" id="127" value="LAN">(C) Local Area Network
                     </label>
                 </div>
                 <div class="section">
                     <label for="128">
-                        <input type="radio" name="ans7" id="128">(D) Wide Area Network
+                        <input type="radio" name="ans7" id="128" value="WAN">(D) Wide Area Network
                     </label>
                 </div>
             </ul>
@@ -193,22 +194,22 @@
             <ul>
                 <div class="section">
                     <label for="129">
-                        <input type="radio" name="ans8" id="129">(A) System file
+                        <input type="radio" name="ans8" id="129" value="system">(A) System file
                     </label>
                 </div>
                 <div class="section">
                     <label for="130">
-                        <input type="radio" name="ans8" id="130">(B) Animation/movie file
+                        <input type="radio" name="ans8" id="130" value="movie">(B) Animation/movie file
                     </label>
                 </div>
                 <div class="section">
                     <label for="131">
-                        <input type="radio" name="ans8" id="131">(C) MS Encarta document
+                        <input type="radio" name="ans8" id="131" value="MS">(C) MS Encarta document
                     </label>
                 </div>
                 <div class="section">
                     <label for="132">
-                        <input type="radio" name="ans8" id="132">(D) Image file
+                        <input type="radio" name="ans8" id="132" value="image">(D) Image file
                     </label>
                 </div>
             </ul>
@@ -218,22 +219,22 @@
             <ul>
                 <div class="section">
                     <label for="133">
-                        <input type="radio" name="ans9" id="133">(A) 74 mins
+                        <input type="radio" name="ans9" id="133" value="74">(A) 74 mins
                     </label>
                 </div>
                 <div class="section">
                     <label for="134">
-                        <input type="radio" name="ans9" id="134">(B) 56 mins
+                        <input type="radio" name="ans9" id="134" value="56">(B) 56 mins
                     </label>
                 </div>
                 <div class="section">
                     <label for="135">
-                        <input type="radio" name="ans9" id="135">(C) 60 mins
+                        <input type="radio" name="ans9" id="135" value="60">(C) 60 mins
                     </label>
                 </div>
                 <div class="section">
                     <label for="136">
-                        <input type="radio" name="ans9" id="136">(D) 90 mins
+                        <input type="radio" name="ans9" id="136" value="90">(D) 90 mins
                     </label>
                 </div>
             </ul>
@@ -243,30 +244,34 @@
             <ul>
                 <div class="section">
                     <label for="137">
-                        <input type="radio" name="ans10" id="137">(A) Backup file
+                        <input type="radio" name="ans10" id="137" value="backup file">(A) Backup file
                     </label>
                 </div>
                 <div class="section">
                     <label for="138">
-                        <input type="radio" name="ans10" id="138">(B) Audio file
+                        <input type="radio" name="ans10" id="138" value="audio">(B) Audio file
                     </label>
                 </div>
                 <div class="section">
                     <label for="139">
-                        <input type="radio" name="ans10" id="139">(C) Animation/movie file
+                        <input type="radio" name="ans10" id="139" value="movie">(C) Animation/movie file
                     </label>
                 </div>
                 <div class="section">
                     <label for="140">
-                        <input type="radio" name="ans10" id="140">(D) MS Encarta document
+                        <input type="radio" name="ans10" id="140" value="MS">(D) MS Encarta document
                     </label>
                 </div>
             </ul>
         </div>
         <div class="submit">
-            <button class="button">Submit</button>
+            <button class="button" onsubmit="Submit()">Submit</button>
+        </div>
+        <div class="res">
+            <p id="result"></p>
         </div>
     </div>
+    <script src="./script/script.js"></script>
 </body>
 
-</html>
+    </html>
