--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <p id="result"></p>
         </div>
     </div>
-    <script src="./script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
     </html>
